feature/0002: fix actor api